# MetalMom

./: .gitattributes  .gitignore  .readthedocs.yaml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-MODELS  Package.swift  README.md  RELEASING.md  cliff.toml  pyproject.toml
.github/workflows/: api-parity.yml  ci.yml  docs.yml  parity.yml  release.yml
Sources/MetalMomBridge/: Bridge.swift
Sources/MetalMomCBridge/: module.modulemap
Sources/MetalMomCore/: MetalMomCore.swift
Sources/ProfilingRunner/: ProfilingRunner.swift  main.swift
Tests/: test_audio_io.py  test_beat_track.py  test_bridge_errors.py  test_bridge_integration.py  test_compat_completeness.py  test_compat_e2e.py  test_compat_madmom_signatures.py  test_compat_signatures.py  test_compat_sweep.py  test_core.py  test_display.py  test_e2e_models.py  test_eval.py  test_filters.py  test_hpss.py  test_import.py  test_madmom_compat.py  test_madmom_eval_compat.py  test_memory_stress.py  test_model_parity.py  test_models_module.py  test_native.py  test_onset_detect.py  test_onset_eval.py  test_onset_strength.py  test_parity_chroma.py  test_parity_delta.py  test_parity_istft.py  test_parity_mel_filterbank.py  test_parity_melspec.py  test_parity_mfcc.py  test_parity_poly.py  test_parity_rms_zcr.py  test_parity_scaling.py  test_parity_spectral.py  test_parity_stft.py  test_parity_tonnetz.py  test_piptrack.py  test_pitch_shift.py  test_plp.py  (+15 more)
Tests/MetalMomTests/: AudioIOTests.swift  BeatEvalTests.swift  BeatTrackerTests.swift  BridgeErrorTests.swift  CQTTests.swift  CRFTests.swift  ChordEvalTests.swift  ChordRecognitionTests.swift  ChromaTests.swift  ChromaVariantsTests.swift  ChunkedInferenceTests.swift  ClusteringTests.swift  CombFilterTests.swift  ComplexSTFTTests.swift  ComplexSignalTests.swift  DTWTests.swift  DeltaTests.swift  DispatchTests.swift  DownbeatTests.swift  EdgeCaseTests.swift  EnsembleRunnerTests.swift  FilterBankTests.swift  FusedMFCCTests.swift  GMMTests.swift  GPUParityTests.swift  HMMTests.swift  HPSSTests.swift  ISTFTTests.swift  InferenceEngineTests.swift  InversionTests.swift  KeyDetectionTests.swift  MFCCTests.swift  (+57 more)
benchmarks/: run_benchmarks.py
docs/: profiling-report.md
scripts/: build_dylib.sh  build_wheel.sh  build_xcframework.sh  bump_version.sh  calibrate_thresholds.py  create_test_model.py  generate_filter_coefficients.py  generate_golden.py  upload_models_hf.py
(+319 files in other folders)
